Moving files to align with Maven guidelines