@@ -6,7 +6,8 @@
 plugins {
     // Apply the Kotlin JVM plugin to add support for Kotlin on the JVM.
     id 'org.jetbrains.kotlin.jvm' version '1.3.41'
-
+    id 'java'
+    id 'maven'
     // Apply the application plugin to add support for building a CLI application.
     id 'application'
 }
@@ -27,9 +28,22 @@ repositories {
 
 compileKotlin{
     kotlinOptions{
-        jvmTarget = "1.8"
+        jvmTarget = "11"
     }
 }
+compileJava {
+    options.compilerArgs.addAll([
+            "--add-exports","java.desktop/sun.awt=ALL-UNNAMED"
+    ])
+
+    options.compilerArgs.addAll([
+            "--add-exports","java.desktop/java.awt.peer=ALL-UNNAMED"
+    ])
+}
+
+group = 'P3achB0t'
+// artifactId is taken by default, from folder name
+version = '0.1-SNAPSHOT'
 
 dependencies {
     // Use the Kotlin JDK 8 standard library.
@@ -45,6 +59,8 @@ dependencies {
     implementation("org.ow2.asm:asm-commons:7.1")
     implementation("io.github.microutils:kotlin-logging:1.7.2")
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.9.7")
+    compile 'com.intellij:forms_rt:7.0.3'
+    compile 'commons-lang:commons-lang:2.3'
 
     // Use the Kotlin test library.
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
@@ -52,7 +68,10 @@ dependencies {
     // Use the Kotlin JUnit integration.
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
 }
+sourceCompatibility = '11'
+targetCompatibility = '11'
 
 // Define the main class for the application.
 apply plugin: 'kotlin'
 apply plugin: 'application'
+apply plugin: 'maven'
